Fix the navigation width for overlap search button

--- a/core/css/header.css
+++ b/core/css/header.css
@@ -41,7 +41,7 @@
 
 /* NAVIGATION ------------------------------------------------------------  */
   #navigation {
-    width: 100%;
+    width: 80%;
     background-color: transparent;
     box-shadow: none;
     border-radius: 0;
